[package]
name = "ejsonkms"
version = "0.0.3"
edition = "2021"
authors = ["Trung Lê <8@tle.id.au>"]
description = "Manage encrypted secrets using EJSON & AWS KMS"
license = "MIT"
repository = "https://github.com/runlevel5/ejsonkms-rs"
keywords = ["ejson", "kms", "secrets", "encryption", "aws"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "ejsonkms"
path = "src/main.rs"

[lib]
name = "ejsonkms"
path = "src/lib.rs"

[dependencies]
# EJSON libraries
ejson = { git = "https://github.com/runlevel5/ejson-rs.git", tag = "v0.0.7" }
ejson2env = { git = "https://github.com/runlevel5/ejson2env-rs.git", tag = "v0.0.5" }

# AWS SDK
aws-config = "1.8"
aws-sdk-kms = "1.97"

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
toml = "0.9"

# Encoding
base64 = "0.22"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Security
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
tempfile = "3.24"
