[package]
name = "ejsonkms"
version = "1.0.0"
edition = "2021"
authors = ["Trung Lê <8@tle.id.au>"]
description = "Manage encrypted secrets using EJSON & AWS KMS"
license = "MIT"
repository = "https://github.com/runlevel5/ejsonkms-rs"
keywords = ["ejson", "kms", "secrets", "encryption", "aws"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "ejsonkms"
path = "src/main.rs"

[lib]
name = "ejsonkms"
path = "src/lib.rs"

[dependencies]
# EJSON libraries
ejson = { git = "https://github.com/runlevel5/ejson-rs.git", tag = "v1.0.0" }

# AWS SDK
aws-config = "1.8"
aws-sdk-kms = "1.97"

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_norway = "0.9"
toml = "0.9"

# Encoding
base64 = "0.22"

# Error handling
thiserror = "2.0"

# Security
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
tempfile = "3.24"
